--- a/BE/apache-config.conf
+++ b/BE/apache-config.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
     ServerAdmin admin@dalila.com
-    DocumentRoot /var/www/html/public
+    DocumentRoot /var/www/html
 
-    <Directory /var/www/html/public>
+    <Directory /var/www/html>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
