--- a/admin/package.json
+++ b/admin/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
