Add test scripts for API and database connection
- Created test-admin-uri.php to validate admin URI patterns and file existence.
- Added test-api.php to simulate loading environment variables and database configuration.
- Implemented test-endpoints.php to test various API endpoints and capture responses.
- Developed test-error.php to check database connection using .env variables.
- Introduced test-routing.php to simulate API routing and handle errors.

--- a/FE/.env.production
+++ b/FE/.env.production
@@ -9,5 +9,5 @@ VITE_API_URL=/api
 DB_HOST=localhost
 DB_NAME=dalila_db
 DB_USER=dalila_user
-DB_PASSWORD=METTI_PASSWORD_GODADDY_QUI
+DB_PASSWORD=L2tZ%oFZpF87
 JWT_SECRET=METTI_JWT_SECRET_PRODUZIONE_QUI
