--- a/.env.production
+++ b/.env.production
@@ -9,5 +9,5 @@ VITE_API_URL=/api
 DB_HOST=localhost
 DB_NAME=dalila_db
 DB_USER=dalila_user
-DB_PASSWORD=METTI_PASSWORD_GODADDY_QUI
-JWT_SECRET=METTI_JWT_SECRET_PRODUZIONE_QUI
+DB_PASSWORD=L2tZ%oFZpF87
+JWT_SECRET=9fK2xAqL!R8Zp@D4WmH7yE6C#VJbT0sN1UoI
