--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,11 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-table": "^8.11.8",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -31,7 +36,6 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
-    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-simple-wysiwyg": "^3.4.1",
     "tailwind-merge": "^2.2.0",
