--- a/admin/package.json
+++ b/admin/package.json
@@ -22,11 +22,6 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-table": "^8.11.8",
-    "@tiptap/extension-link": "^3.15.3",
-    "@tiptap/extension-text-align": "^3.15.3",
-    "@tiptap/extension-underline": "^3.15.3",
-    "@tiptap/react": "^3.15.3",
-    "@tiptap/starter-kit": "^3.15.3",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -38,8 +33,10 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
     "react-simple-wysiwyg": "^3.4.1",
+    "react-trix": "^0.10.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "trix": "^2.1.16",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
