--- a/FE/.env.production
+++ b/FE/.env.production
@@ -10,4 +10,4 @@ DB_HOST=localhost
 DB_NAME=dalila_db
 DB_USER=dalila_user
 DB_PASSWORD=L2tZ%oFZpF87
-JWT_SECRET=METTI_JWT_SECRET_PRODUZIONE_QUI
+JWT_SECRET=9fK2xAqL!R8Zp@D4WmH7yE6C#VJbT0sN1UoI
