Add SEO fields, alt text, and redirect table to blogs, videos, and testimonials
- Introduced new SEO-related columns to the `blogs` and `videos` tables, including `seoTitle`, `seoDescription`, and `thumbnail_alt`.
- Added `is_home` and `deleted_at` columns to both `blogs` and `videos`, with appropriate default values.
- Created a new `testimonials` table with necessary fields and replaced `is_active` with `is_home`.
- Established a new `redirect` table for managing URL redirects.
- Updated existing records to ensure `is_home` defaults to 0 where applicable.
- Added necessary indexes for improved query performance.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -41,6 +41,11 @@ RUN mkdir -p /var/www/html/uploads/properties \
     /var/www/html/uploads/galleries \
     /var/www/html/uploads/blogs \
     /var/www/html/uploads/temp \
+    /var/www/html/uploads/images \
+    /var/www/html/uploads/images/blog \
+    /var/www/html/uploads/images/video \
+    /var/www/html/uploads/images/properties \
+    /var/www/html/uploads/images/city \
     && chown -R www-data:www-data /var/www/html/uploads \
     && chmod -R 755 /var/www/html/uploads
 
