--- a/api/.htaccess
+++ b/api/.htaccess
@@ -27,6 +27,9 @@ RewriteRule ^api/(.*)$ index.php [QSA,L]
 # Disable directory listing
 Options -Indexes
 
-# Set upload file size limits
-php_value upload_max_filesize 10M
-php_value post_max_size 10M
+# Set upload file size limits for large images/videos
+php_value upload_max_filesize 50M
+php_value post_max_size 50M
+php_value max_execution_time 300
+php_value memory_limit 256M
+php_value max_input_time 300
