Add script to reset database to a fresh state

--- a/api/.env.example
+++ b/api/.env.example
@@ -6,3 +6,13 @@ DB_NAME=dme8be4x62fn_dalila_db
 DB_USER=dme8be4x62fn_dalila_user
 DB_PASSWORD=YOUR_DATABASE_PASSWORD_HERE
 JWT_SECRET=YOUR_JWT_SECRET_HERE
+CONTACT_TO_EMAIL=dalila@buywithdali.com
+CONTACT_FROM_EMAIL=no-reply@buywithdali.com
+CONTACT_FROM_NAME=Buy With Dali
+CONTACT_ALLOWED_ORIGINS=https://buywithdali.com,https://www.buywithdali.com
+CONTACT_RATE_LIMIT=3
+CONTACT_RATE_WINDOW=60
+CONTACT_EMAIL_RATE_LIMIT=3
+CONTACT_EMAIL_RATE_WINDOW=60
+CONTACT_MIN_SECONDS=3
+CONTACT_MAX_SECONDS=14400
