--- a/new/.htaccess
+++ b/new/.htaccess
@@ -12,8 +12,8 @@ RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule . - [L]
 
-# Altrimenti redirect a index.html (React Router)
-RewriteRule . index.html [L]
+# Altrimenti redirect a router.php (React Router + 301 check)
+RewriteRule . router.php [L]
 
 # Abilita Gzip compression
 <IfModule mod_deflate.c>
